tests/reject/generic_newtype_bare_int.ty
# A bare int passed where a generic fn wants a concrete newtype (Handle) param must
# be rejected in BOTH compilers (newtype identity through a generic call).
type Handle = int
struct Box($T):
    v: $T
fn slot(b: Box($T), h: Handle) -> int:
    return to_int(h)
fn main():
    b := Box(5)
    println(str(slot(b, 7)))
